--- a/app/globals.css
+++ b/app/globals.css
@@ -31,8 +31,12 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: #1465bb; /* bleu vif */
+  text-decoration: underline; /* pour renforcer la visibilité */
+}
+
+a:hover {
+  color: #0056b3; /* bleu plus foncé au survol */
 }
 
 @media (prefers-color-scheme: dark) {
